--- a/Web/BrickBreaker/style.css
+++ b/Web/BrickBreaker/style.css
@@ -39,6 +39,13 @@ button{
     font-size: 16px;
 }
 
+.description{
+    position: relative;
+    top: 5px;
+    font-size: 16px;
+
+}
+
 .links-tab{
     background-color: #FAACA8;
     background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
@@ -71,3 +78,12 @@ button{
  .screenshot {
      height: 400px;
  }
+
+ .credits-div {
+     position: relative;
+     top: 30px;
+ }
+ 
+.credits-list{
+    font-size: 16px;
+}
